Fix: Tabbar Width - Consistently in the gap. #440

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -3253,7 +3253,7 @@
       }
     }
     .tabbrowser-tab:not([last-visible-tab]) {
-      margin-inline-end: -0.5px !important;
+      margin-inline-end: -1px !important;
     }
   }
   @supports -moz-bool-pref("userChrome.tab.photon_like_padding") {
